Update on resume
Updated sections, tags, css.

--- a/bootstrap-portfolio-template-main/css/bootstrap.css
+++ b/bootstrap-portfolio-template-main/css/bootstrap.css
@@ -994,6 +994,10 @@ progress {
 .gy-5 {
   --bs-gutter-y: 3rem;
 }
+#resume {
+  text-align: center;
+  
+}
 
 @media (min-width: 576px) {
   .col-sm {
